--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,5 @@ body {
   font-family: 'Arial', sans-serif;
   line-height: 1.6;
   color: #333;
-  background-color: #f8f9fa;
+  background-color: #fff;
 }
